--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
-<main>
-  <a [routerLink]="['/']">
-    <header class="brand-name">
-      <img class="brand-logo" src="/assets/house.svg" alt="logo" aria-hidden="true">
-      <strong>Homes</strong>
-    </header>
-  </a>
-  <section class="content">
-    <router-outlet></router-outlet>
-  </section>
-</main>
+<header>
+  <h1>Local Storage Contact List</h1>
+</header>
+
+<div class="router-outlet">
+  <router-outlet></router-outlet>
+</div>
+<footer>Aleksandra Czech</footer>
