--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -1,72 +1,31 @@
-.listing-photo {
-  height: 600px;
-  width: 50%;
-  object-fit: cover;
-  border-radius: 30px;
-  float: right;
+.details-container {
+  padding: 20px;
 }
 
-.listing-heading {
-  font-size: 48pt;
-  font-weight: bold;
-  margin-bottom: 15px;
+.person {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 20px 0;
+  max-width: 320px;
+  box-sizing: border-box;
 }
 
-.listing-location::before {
-  content: url('/assets/geo-alt-fill.svg') / '';
+.person h2 {
+  padding: 0;
+  margin: 0;
 }
 
-.listing-location {
-  font-size: 24pt;
-  margin-bottom: 15px;
+dl {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.listing-features > .section-heading {
-  color: var(--secondary-color);
-  font-size: 24pt;
-  margin-bottom: 15px;
+dl.address {
+  background-color: #ccc;
+  margin: 10px -20px 0 -20px;
+  padding: 0 20px;
 }
-
-.listing-features {
-  margin-bottom: 20px;
-}
-
-.listing-features li {
-  font-size: 14pt;
-}
-
-li {
-  list-style-type: none;
-}
-
-.listing-apply .section-heading {
-  font-size: 18pt;
-  margin-bottom: 15px;
-}
-
-label, input {
-  display: block;
-}
-label {
-  color: var(--secondary-color);
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 12pt;
-}
-input {
-  font-size: 16pt;
-  margin-bottom: 15px;
-  padding: 10px;
-  width: 400px;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  border-bottom: solid .3px;
-}
-@media (max-width: 1024px) {
-  .listing-photo {
-    width: 100%;
-    height: 400px;
-  }
-}
-
