--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
 <header>
-  <h1>Local Storage Contact List</h1>
+  <h1>Backend-Based Task Manager</h1>
+  <nav>
+    <a routerLink="/tasks" routerLinkActive="active">Tasks</a>
+    <a routerLink="/archive" routerLinkActive="active">Archive</a>
+  </nav>
+
 </header>
 
 <div class="router-outlet">
   <router-outlet></router-outlet>
 </div>
+
 <footer>Aleksandra Czech</footer>
